Move test cases to a test suite file so we can keep the rig separate from the logic

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,8 @@ set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 
 set(CCNX_TESTRIG_SOURCES
         src/ccnxTestrig_Link.c
-        src/ccnxTestrig.c)
+        src/ccnxTestrig.c
+        src/ccnxTestrig_Suite.c)
 
 include_directories(${CCNX_HOME}/include)
 
