--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,11 @@ set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
 
 set(CCNX_TESTRIG_SOURCES
         src/ccnxTestrig_Link.c
+        src/ccnxTestrig_Reporter.c
         src/ccnxTestrig.c
         src/ccnxTestrig_Suite.c
-        src/ccnxTestrig_Reporter.c
-        src/ccnxTestrigSuiteTestResult.c)
+        src/ccnxTestrig_Script.c
+        src/ccnxTestrig_SuiteTestResult.c)
 
 include_directories(${CCNX_HOME}/include)
 
